Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6245699/T6245699b.out
T6245699b.java:23:23: compiler.err.override.meth: (compiler.misc.cant.override: doIt(), T6245699b.Bar, doIt(), T6245699b.Foo), final
1 error
